k3s/camera/deployment-camera.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camera
  name: deployment-camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camera
  template:
    metadata:
      labels:
        app: camera
    spec:
      containers:
      - image: fufuhu/camera:20190722
        name: camera
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /home/django/app/services/images
          name: volume-image
      - image: fufuhu/s3-syncer:20190721
        name: syncer
        command:
          - ./s3_sync_with_loop.sh
        volumeMounts:
        - mountPath: /images
          name: volume-image
      volumes:
      - name: volume-image
        emptyDir: {}

# /home/django/app/services/images/
# /images
