k3s/camera/loadbalancer-camera.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camera
  name: loadbalancer-camera
spec:
  ports:
  - name: camera-port-lb
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: camera
  type: LoadBalancer
