k3s/camera/service-camera.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camera
  name: service-camera
spec:
  ports:
  - name: camera-port
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: camera
  type: ClusterIP
